--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,7 +38,7 @@
         "func-call-spacing": "error",
         "func-name-matching": "error",
         "func-names": "error",
-        "func-style": ["error", "declaration"],
+        "func-style": ["error", "declaration", { "allowArrowFunctions": true }],
         "function-call-argument-newline": ["error", "consistent"],
         "function-paren-newline": ["error", "consistent"],
         "generator-star-spacing": "error",
