--- a/config.json
+++ b/config.json
@@ -3,6 +3,6 @@
     "maxInProgress": 50,
     "maxRetries": 5,
     "minBytes": 50000,
-    "outputPath": "F:/guides",
+    "outputPath": "C:/eguides",
     "overwrite": false
 }
