--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
     "name": "offline-primagames-eguides",
-    "version": "1.0.0",
+    "version": "1.1.0",
     "description": "Download your e-guides from primagames for offline use.",
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node index.js"
     },
-    "author": "Revadike <https://revadike.ga>",
+    "author": "Revadike <https://revadike.com>",
     "license": "MIT",
     "repository": {
         "type": "git",
