--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
         "eslint": "^6.8.0"
     },
     "dependencies": {
-        "fs-extra": "^9.0.0",
-        "pdf-merger-js": "^3.0.1",
-        "promise-parallel-throttle": "^3.3.0",
-        "puppeteer": "^3.0.0"
+        "fs-extra": "latest",
+        "pdf-merger-js": "latest",
+        "promise-parallel-throttle": "latest",
+        "puppeteer": "latest"
     }
 }
